--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,28 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.neon-shadow {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  color: #ecf0c6;
+  text-align: center;
+  letter-spacing: 0.05em;
+  position: relative;
+  white-space: nowrap;
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-shadow:
+    0 0 7px #ff9100,
+    0 0 10px #ff9100,
+    0 0 21px #ff9100,
+    0 0 42px #ff9100,
+    0 0 82px #ff9100,
+    0 0 92px #ff9100,
+    0 0 102px #ff9100,
+    0 0 151px #ff9100;
+  animation: fadeIn 2s ease-in-out, pulsate 1.5s infinite alternate;
+  margin-bottom: 10px;
+  /* Reducing the gap */
+}
